<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10dp"
    tools:context=".RegisterActivity">

    <ScrollView
        android:onClick="hideKeyboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/title_register"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/title_country"
                android:textSize="@dimen/_18sp" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/codepicker_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_textfield"
                android:padding="@dimen/_5dp"
                android:textAlignment="textStart"
                app:ccp_textGravity="LEFT" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/title_primarity"
                android:textSize="@dimen/_18sp" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/color_red_e65045"
                    android:text="@string/radio_1" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/color_red_e65045"
                    android:checked="true"
                    android:text="@string/radio_2" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/title_birth_day"
                android:textSize="@dimen/_18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lil_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_textfield"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:focusable="true"
                        android:id="@+id/edt_year"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40dp"
                        android:layout_marginLeft="@dimen/_5dp"
                        android:layout_marginTop="@dimen/_2dp"
                        android:layout_marginBottom="@dimen/_2dp"
                        android:layout_weight="1"
                        android:background="@drawable/flag_transparent"
                        android:hint="YYYY"
                        android:inputType="number"
                        android:maxLength="4" />

                    <ImageView
                        android:id="@+id/img_error_year"
                        android:layout_width="@dimen/_20dp"
                        android:layout_height="@dimen/_20dp"
                        android:layout_margin="@dimen/_5dp"
                        android:src="@drawable/ic_error"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lil_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_textfield"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_month"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40dp"
                        android:layout_marginLeft="@dimen/_5dp"
                        android:layout_marginTop="@dimen/_2dp"
                        android:layout_marginBottom="@dimen/_2dp"
                        android:layout_weight="1"
                        android:background="@drawable/flag_transparent"
                        android:hint="MM"
                        android:inputType="number"
                        android:maxLength="2" />

                    <ImageView
                        android:id="@+id/img_error_month"
                        android:layout_width="@dimen/_20dp"
                        android:layout_height="@dimen/_20dp"
                        android:layout_margin="@dimen/_5dp"
                        android:src="@drawable/ic_error"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lil_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_textfield"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_day"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40dp"
                        android:layout_marginLeft="@dimen/_5dp"
                        android:layout_marginTop="@dimen/_2dp"
                        android:layout_marginBottom="@dimen/_2dp"
                        android:layout_weight="1"
                        android:background="@drawable/flag_transparent"
                        android:hint="DD"
                        android:inputType="number"
                        android:maxLength="2" />

                    <ImageView
                        android:id="@+id/img_error_day"
                        android:layout_width="@dimen/_20dp"
                        android:layout_height="@dimen/_20dp"
                        android:layout_margin="@dimen/_5dp"
                        android:src="@drawable/ic_error"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_error_birth_day"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/wrong_birthday"
                android:textColor="@color/color_red_e65045" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/title_email"
                android:textSize="@dimen/_18sp" />

            <LinearLayout
                android:id="@+id/lil_eamil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5dp"
                android:layout_weight="1"
                android:background="@drawable/border_textfield"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:layout_marginBottom="@dimen/_2dp"
                    android:layout_weight="1"
                    android:text=".com"
                    android:background="@drawable/flag_transparent"
                    android:inputType="textEmailAddress" />

                <ImageView
                    android:id="@+id/img_error_email"
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:layout_margin="@dimen/_5dp"
                    android:src="@drawable/ic_error"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_error_email"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/wrong_email"
                android:textColor="@color/color_red_e65045" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/title_phone"
                android:textSize="@dimen/_18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/codepicker_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5dp"
                    android:textAlignment="textStart"
                    app:ccp_textGravity="LEFT" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/lil_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5dp"
                        android:layout_marginRight="@dimen/_5dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_textfield"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_phone"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40dp"
                            android:layout_marginLeft="@dimen/_5dp"
                            android:layout_marginTop="@dimen/_2dp"
                            android:layout_marginBottom="@dimen/_2dp"
                            android:layout_weight="1"
                            android:background="@drawable/flag_transparent"
                            android:inputType="number" />

                        <ImageView
                            android:id="@+id/img_error_phone"
                            android:layout_width="@dimen/_20dp"
                            android:layout_height="@dimen/_20dp"
                            android:layout_margin="@dimen/_5dp"
                            android:src="@drawable/ic_error"
                            android:visibility="gone" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/txt_error_phone"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/wrong_phone"
                        android:textColor="@color/color_red_e65045" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/title_password"
                android:textSize="@dimen/_18sp" />

            <LinearLayout
                android:id="@+id/lil_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5dp"
                android:layout_weight="1"
                android:background="@drawable/border_textfield"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:layout_marginBottom="@dimen/_2dp"
                    android:layout_weight="1"
                    android:background="@drawable/flag_transparent"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/img_error_password"
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:layout_margin="@dimen/_5dp"
                    android:src="@drawable/ic_error"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/txt_error_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/wrong_password"
                android:textColor="@color/color_red_e65045" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/title_confirm_pass"
                android:textSize="@dimen/_18sp" />

            <LinearLayout
                android:id="@+id/lil_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5dp"
                android:layout_weight="1"
                android:background="@drawable/border_textfield"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:layout_marginBottom="@dimen/_2dp"
                    android:layout_weight="1"
                    android:background="@drawable/flag_transparent"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/img_error_confirmpass"
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:layout_margin="@dimen/_5dp"
                    android:src="@drawable/ic_error"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/txt_error_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/wrong_confirm"
                android:textColor="@color/color_red_e65045" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:buttonTint="@color/color_red_e65045"
                android:text="@string/app_checkbox" />

            <TextView
                android:id="@+id/txt_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:gravity="center"
                android:text="@string/wrong_policy"
                android:textColor="@color/color_red_e65045" />

            <Button
                android:id="@+id/btnCreate"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:background="@drawable/bg_create_account"
                android:text="@string/app_create_account"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_circular"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>